maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:6: error: ')' expected but 'val' found.
int setValueIfLess(int x, int y, int val) ;
                                     ^